--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     </div>
     <hr>
-
+<!-- coba tambahkan komentar -->
     <div id="wraper">
         <div id="header">Top Rated E-Groceries Shop in <br>Indonesia<br></div>
         <div id="subheader">Every Day with best Ingredients</div>
